--- a/_config.yml
+++ b/_config.yml
@@ -139,6 +139,8 @@ home_banner:
     family: 
     # URL to font CSS file
     url:
+    # Font weight
+    weight: 700 # 100-900
   # Home banner social links
   social_links:
     # Whether to enable
