--- a/_config.yml
+++ b/_config.yml
@@ -131,6 +131,8 @@ home_banner:
     subtitle_size: 1.5rem
     # Line height between title and subtitle
     line_height: 1.2
+    # Font weight
+    font_weight: 450 # 100-900
   # Home banner custom font
   custom_font: 
     # Whether to enable custom font
@@ -139,8 +141,6 @@ home_banner:
     family: 
     # URL to font CSS file
     url:
-    # Font weight
-    weight: 700 # 100-900
   # Home banner social links
   social_links:
     # Whether to enable
