--- a/_config.yml
+++ b/_config.yml
@@ -105,6 +105,10 @@ home_banner:
   image: 
     light: /images/wallhaven-wqery6-light.webp # light mode
     dark: /images/wallhaven-wqery6-dark.webp # dark mode
+  # Home banner background color
+  background_color: # Remove the background image to enable this
+    light: "#fff" # light mode
+    dark: "#000" # dark mode
   # Home banner title
   title: Theme Redefine
   # Home banner subtitle
